Add the progress